se pintan canciones en albumes

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,5 +1,5 @@
 .banner{
-    background-image: url("https://firebasestorage.googleapis.com/v0/b/fotos-artistas-top-track.appspot.com/o/zion%20y%20lennox.jpg?alt=media&token=d805151c-4d7f-4025-8833-8bd9205619d6");
+    background-image: url("https://firebasestorage.googleapis.com/v0/b/pruebareactwi.appspot.com/o/AC-DC.jpg?alt=media&token=cf67d5c6-02ba-455a-a235-7888620dd78c");
     background-position: cover;
     padding: 5% 20% 30% 20%;
 }
